[package]
name        = "logicfuzzy_academic"
version = "0.1.3"
edition     = "2021"
rust-version = "1.70"
authors     = ["Benjamin Yuji Suzuki <github.com/Benjamin-Yuji-Suzuki>"]
description = "Pure-Rust Mamdani Fuzzy Inference System — no external fuzzy crates"
license     = "MIT"
repository  = "https://github.com/Benjamin-Yuji-Suzuki/logicfuzzy-academic"
readme      = "README.md"
keywords    = ["fuzzy", "mamdani", "inference", "control", "ai"]
categories  = ["science", "algorithms"]

[package.metadata.docs.rs]
all-features = true

[lib]
name = "logicfuzzy_academic"
path = "src/lib.rs"

[[example]]
name = "demo"
path = "examples/demo.rs"