[package]
name        = "logicfuzzy_academic"
version     = "0.2.1"
edition     = "2021"
rust-version = "1.70"
authors     = ["Benjamin Yuji Suzuki <byujisuzuki@gmail.com>"]
description = "Pure-Rust Fuzzy Inference System (Mamdani + TSK) with PSO optimizer — zero external dependencies"
license     = "MIT"
repository  = "https://github.com/Benjamin-Yuji-Suzuki/logicfuzzy-academic"
readme      = "README.md"
keywords    = ["fuzzy", "mamdani", "inference", "control", "ai"]
categories  = ["science", "algorithms"]

[package.metadata.docs.rs]
all-features = true

[lib]
name = "logicfuzzy_academic"
path = "src/lib.rs"

[[example]]
name = "demo"
path = "examples/demo.rs"

[[example]]
name = "tsk_demo"
path = "examples/tsk_demo.rs"

[[example]]
name = "pso_demo"
path = "examples/pso_demo.rs"

[[example]]
name = "pso_mamdani_demo"
path = "examples/pso_mamdani_demo.rs"